--- a/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
+++ b/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
@@ -24,9 +24,10 @@
     <PackageTags>winforms;helpers;invoke;validation</PackageTags>
     <PackageReleaseNotes>
       Added spinning activity indicator and thread safe progress form.
-      Added thread safe progress form message boxs.
+      Added thread safe progress form message boxes.
+      Added exception helpers.
     </PackageReleaseNotes>
-    <Version>1.1.3</Version>
+    <Version>1.1.5</Version>
     <EnableNETAnalyzers>False</EnableNETAnalyzers>
     <Description>Helpers for working with WinForms. Getting and setting values, simplifications for invoke, etc.</Description>
   </PropertyGroup>
