--- a/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
+++ b/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
@@ -23,12 +23,9 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>winforms;helpers;invoke;validation</PackageTags>
     <PackageReleaseNotes>
-      Added spinning activity indicator and thread safe progress form.
-      Added thread safe progress form message boxes.
-      Added exception helpers.
-      Added Task/async helpers.
+      Removed non-winforms functions to NTDLS.Helpers.
     </PackageReleaseNotes>
-    <Version>1.1.6</Version>
+    <Version>1.2.0</Version>
     <EnableNETAnalyzers>False</EnableNETAnalyzers>
     <Description>Helpers for working with WinForms. Getting and setting values, simplifications for invoke, etc.</Description>
   </PropertyGroup>
