--- a/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
+++ b/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
@@ -25,8 +25,9 @@
     <PackageReleaseNotes>
       Removed non-winforms functions to NTDLS.Helpers.
       Added NTDLS.Helpers nuget for non-winforms cross-functions.
+	  Documentation.
     </PackageReleaseNotes>
-    <Version>1.2.4</Version>
+    <Version>1.2.5</Version>
     <EnableNETAnalyzers>False</EnableNETAnalyzers>
     <Description>Helpers for working with WinForms. Getting and setting values, simplifications for invoke, etc.</Description>
   </PropertyGroup>
