--- a/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
+++ b/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
@@ -23,11 +23,9 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>winforms;helpers;invoke;validation</PackageTags>
     <PackageReleaseNotes>
-      Removed non-winforms functions to NTDLS.Helpers.
-      Added NTDLS.Helpers nuget for non-winforms cross-functions.
-	  Documentation.
+      Dependency updates.
     </PackageReleaseNotes>
-    <Version>1.2.6</Version>
+    <Version>1.2.7</Version>
     <EnableNETAnalyzers>False</EnableNETAnalyzers>
     <Description>Helpers for working with WinForms. Getting and setting values, simplifications for invoke, etc.</Description>
   </PropertyGroup>
@@ -44,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NTDLS.Helpers" Version="1.2.8" />
+    <PackageReference Include="NTDLS.Helpers" Version="1.3.5" />
   </ItemGroup>
 
 </Project>
