--- a/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
+++ b/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
@@ -24,8 +24,9 @@
     <PackageTags>winforms;helpers;invoke;validation</PackageTags>
     <PackageReleaseNotes>
       Dependency updates.
+      Added invoke prefix.
     </PackageReleaseNotes>
-    <Version>1.2.7</Version>
+    <Version>1.3.0</Version>
     <EnableNETAnalyzers>False</EnableNETAnalyzers>
     <Description>Helpers for working with WinForms. Getting and setting values, simplifications for invoke, etc.</Description>
   </PropertyGroup>
@@ -42,7 +43,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NTDLS.Helpers" Version="1.3.5" />
+    <PackageReference Include="NTDLS.Helpers" Version="1.3.7" />
   </ItemGroup>
 
 </Project>
