--- a/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
+++ b/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
@@ -23,9 +23,9 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>winforms;helpers;invoke;validation</PackageTags>
     <PackageReleaseNotes>
-      Dependency updates.
+      Async progress form execution helpers.
     </PackageReleaseNotes>
-    <Version>1.3.4</Version>
+    <Version>1.3.5</Version>
     <EnableNETAnalyzers>False</EnableNETAnalyzers>
     <Description>Helpers for working with WinForms. Getting and setting values, simplifications for invoke, etc.</Description>
   </PropertyGroup>
