--- a/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
+++ b/NTDLS.WinFormsHelpers/NTDLS.WinFormsHelpers.csproj
@@ -23,7 +23,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>winforms;helpers;invoke;validation</PackageTags>
     <PackageReleaseNotes>
-      Dependency updates.
+      Implements IDisposable for ProgressForm.
     </PackageReleaseNotes>
     <Version>1.3.11</Version>
     <EnableNETAnalyzers>False</EnableNETAnalyzers>
